k8s/base/core-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-api
  namespace: ehs
spec:
  selector: { app: core-api }
  ports: [{ port: 3000, targetPort: 3000 }]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-api
  namespace: ehs
  labels: { app: core-api }
spec:
  replicas: 2
  selector: { matchLabels: { app: core-api } }
  template:
    metadata:
      labels: { app: core-api }
    spec:
      containers:
        - name: core-api
          image: ghcr.io/ehs-labs/ehs-core-api:latest
          imagePullPolicy: IfNotPresent
          ports: [{ containerPort: 3000 }]
          readinessProbe:
            httpGet: { path: /healthz, port: 3000 }
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /healthz, port: 3000 }
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests: { cpu: "100m", memory: "256Mi" }
            limits:   { cpu: "1",    memory: "1Gi" }
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sidekiq
  namespace: ehs
spec:
  replicas: 1
  selector: { matchLabels: { app: sidekiq } }
  template:
    metadata: { labels: { app: sidekiq } }
    spec:
      containers:
        - name: sidekiq
          image: ghcr.io/ehs-labs/ehs-core-api:latest
          command: ["bundle", "exec", "sidekiq", "-C", "config/sidekiq.yml"]
          resources:
            requests: { cpu: "100m", memory: "256Mi" }
            limits:   { cpu: "1",    memory: "1Gi" }
